# data-party-logistics

./: .env.example  .gitignore  .pre-commit-config.yaml  .samignore  LICENSE  Makefile  README.md  SHUTDOWN.md  deploy.sh  dpl-shutdown-reminder.ics  main.py  mkdocs.yml  prefect.yaml  pyproject.toml  requirements-predict.txt  requirements.txt  samconfig.toml  scratch_setup_db.py  template.yaml  test_leak.txt  test_leak2.txt  test_leak3.txt
.claude/: settings.json
.claude/previews/: features-explainer.html  option-a-guide.html  phase2-plan.html
.github/workflows/: ci.yml  deploy-dashboard.yml  deploy-serverless.yml  docs.yml
athena/queries/: congestion_target.sql  event_port_attribution_hourly.sql  feature_event_signals_hourly.sql  feature_port_status_hourly.sql  feature_port_status_hourly_v2.sql  feature_vessel_inbound_hourly.sql  feature_vessel_state_hourly.sql
dashboard/: app.js  index.html  styles.css
dashboard-v2/: READINESS_ARTIFACT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
dashboard-v2/public/: demo-data.js  predictions.json  roadmap.json
dashboard-v2/scripts/: generate_docs_index.js
dashboard-v2/src/: App.jsx  index.css  main.jsx
dashboard-v2/src/components/: BrandMark.jsx  FreshnessBanner.jsx  Layout.jsx  LiveAisPanel.jsx  Sidebar.jsx  SourceHealthPills.jsx  Topbar.jsx
dashboard-v2/src/context/: DataContext.jsx
dashboard-v2/src/hooks/: useLiveAis.js  usePredictions.js  useRoadmap.js
dashboard-v2/src/pages/: ArrivalDepartureSchedule.jsx  BerthSchedulingView.jsx  CongestionInsights.jsx  (+5 more)
docs/: 01-problem-framing.md  02-data-sources.md  03-ec2-ingestion-runbook.md  04-ec2-ingestion-implementation-explained.md  04-warehouse-schema.md  05-ingestion-architecture-options.md  06-ec2-stop-and-ml-handoff.md  07-product-prd.md  08-current-state-audit.md  09-next-week-demo-calendar.md  10-vessel-export-implementation.md  11-cloud-go-live-plan.md  12-serverless-pilot.md  13-serverless-status-and-costs.md  14-system-architecture-overview.md  15-data-flow-and-storage-contract.md  16-dashboard-publishing-architecture.md  17-monitoring-and-alarm-semantics.md  18-iam-and-deployment-identity.md  19-athena-query-layer-guide.md  20-dual-runtime-implementation.md  21-market-validation-and-reach-plan.md  22-event-aware-dashboard-task-list.md  23-mid-term-prediction-plan.md  coverage.md  event-intelligence.md  index.md  model-card.md  noaa-geofence-ingestion.md  pipeline-explorer.md  real-geofences-implementation.md  secrets-and-environments.md
docs/architecture/: pipeline-data.json  pipeline-explorer.html
docs/audit/: phase2-roadmap.html  stakeholder-report.html
docs/blog/: index.md
docs/blueprint/: 01-PRD.md  02-ARCHITECTURE.md  03-PROJECT-PLAN.md  04-PERFORMANCE-EVALUATION.md  05-CLEANUP-PLAN.md  06-CHANGELOG.md  07-PILOT-GOLIVE-NOTE.md  08-RUNBOOK.md  09-MODEL-CARD.md  10-DATA-DICTIONARY.md  README.md  v1.2-cleanup-plan.html  v1.2-report.html  v1.2-session-report.html
docs/decisions/: backlog.md
docs/incidents/: 2026-06-11-ais-outage.md
docs/javascripts/: mermaid.js
docs/learning-journal/: index.md
infra/: cloudtrail.tf  main.tf  outputs.tf  provision_server.sh  rds.tf  s3.tf  variables.tf  versions.tf
ingestion/: config.py  port_loader.py  s3_writer.py
ingestion/clients/: __main__.py  ais_stream.py  cmems.py  gdelt_events.py  noaa_tides.py  weather.py
ingestion/loaders/: s3_to_postgres.py
models/: features.py  features_v2.py  vessel_state.py
models/training/: build_dataset.py  build_dataset_v2.py  predict.py  train.py  train_v2.py
orchestration/flows/: dbt_flow.py  ingest_ais.py  ingest_batch.py
roadmap/serverless-pilot/: index.html
scripts/: check_wheel_arch.sh  pause.sh  refresh_predictions.py  resume.sh
serverless/: __init__.py  athena.py  geofences.py  metrics.py  ports.py  s3_health.py
serverless/handlers/: __init__.py  ais_lambda.py  export_lambda.py  features_lambda.py  freshness_lambda.py  gdelt_lambda.py  noaa_lambda.py  predict_lambda.py  weather_lambda.py
tests/: test_ais_stream_v2.py  test_carrier_adapters.py  test_cmems.py  test_gdelt_events.py  test_geofences.py  test_msc_scraper.py  test_noaa_tides.py  test_port_seed.py  test_s3_health.py  test_s3_writer.py  test_smoke.py  test_vessel_state.py  test_weather.py
warehouse/: .dbtignore  dbt_project.yml
warehouse/reference/: noaa_cp7_uslax_anchorages.geojson
warehouse/seeds/: schema.yml  un_locode.csv  wpi_ports.csv
(+23 files in other folders)
