[project]
name = "data-party-logistics"
version = "0.1.0"
description = "Global Port Congestion & Vessel ETA Intelligence Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "boto3>=1.35",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "mkdocs-material>=9.6",
    "moto[s3]>=5.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["ingestion", "warehouse", "features", "models", "serving", "agent", "dashboard", "orchestration"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"