[project]
name = "data-party-logistics"
version = "0.1.0"
description = "Global Port Congestion & Vessel ETA Intelligence Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "httpx>=0.28",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "boto3>=1.35",
    "structlog>=24.4",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "copernicusmarine>=2.3.0",
    "playwright>=1.58.0",
"pandera>=0.31.1",
    "xlrd>=2.0.1",
    # Serving layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "mkdocs-material>=9.6",
    "moto[s3]>=5.0",
    "responses>=0.25",
    "xlwt>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "features", "models", "serving", "agent", "dashboard", "orchestration", "serverless"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["ingestion", "features", "models", "serving", "agent", "dashboard", "orchestration", "serverless"]
exclude = ["infra/", "**/*.sh"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
"mkdocs-material>=9.7.6",
    "moto[s3]>=5.1.22",
    "pytest-asyncio>=1.3.0",
    "xlwt>=1.3.0",
]
