[project]
name = "data-party-logistics"
version = "0.1.0"
description = "Global Port Congestion & Vessel ETA Intelligence Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    # --- Ingestion (live AIS / weather / tide clients) ---
    "httpx>=0.28",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "boto3>=1.35",
    "structlog>=24.4",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    # --- ML training + inference (models/training) ---
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "awswrangler>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "models", "serverless"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["ingestion", "models", "serverless", "scripts"]
exclude = ["infra/", "**/*.sh"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.pep8-naming]
# ML convention: capital X for feature matrices is universal and intentional.
extend-ignore-names = ["X", "X_train", "X_test", "X_val", "X_*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.0",
    "mkdocs-material>=9.7.6",
    "moto[s3]>=5.1.22",
    "responses>=0.25",
]
